--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Editing article:</h1>
 
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article from getting created:</h2>
@@ -22,7 +22,4 @@
 		<%= f.submit %>
 	</p>
 <% end %>
-
-<p>
-	<%= link_to "Back to Articles Listing", articles_path %>
-</p>
+<%= link_to "Back to Articles Listing", articles_path %>
