--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,6 +13,7 @@
 				<div class="article-actions">
 					<%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
 					<%= link_to "View all the articles", articles_path, class: "btn btn-xs btn-success" %>
+					<%= link_to "Delete this article", article_path(article), method: :delete, data: { confirm: "Are you sure to delete this article?" }, class: "btn btn-xs btn-danger" %>
 				</div>
 			</div>
 		</div>
