--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,6 +48,11 @@ $navbar-default-bg: black;
 	margin-top: 0;
 }
 
+.article-meta-details {
+	border-top: 1px solid #eaeaea;
+	margin-top: 15px;
+}
+
 .article-title {
 	font-weight: bold;
 	font-size: 1.5em;
