--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,8 @@
 		<%= gravatar_for @user %>
 	</div>
 </div>
-
+<div class="center">
+	<%= will_paginate @user_articles %>
+</div>
 <h4 align="center">Here are the <%= @user.username %>'s articles:</h4>
-<%= render 'articles/article', obj: @user.articles %>
+<%= render 'articles/article', obj: @user_articles %>
