--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,6 +12,9 @@
 	<h4 class="center desctiption"><strong>Description:</strong></h4>
 	<hr>
 	<%= simple_format(@article.description) %>
+	<% if @article.categories.any? %>
+		<p>Categories: <%= render @article.categories %></p>
+	<% end %>
 	<div class="article-actions">
 		<%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
 		<%= link_to "View all the articles", articles_path, class: "btn btn-xs btn-success" %>
